monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4024/A4024_g.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4024;

grammar A4024_g {

  A;

  D;

  Super = c:D;

  Sub extends Super = c:A;
}
